# snowl

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DESIGN.md  MANIFEST.in  PLANS.md  README.md  README.zh-CN.md  START_HERE.md  pyproject.toml  setup.py
.playwright-cli/: page-2026-03-10T09-00-09-613Z.yml  page-2026-03-10T09-01-47-128Z.yml  page-2026-03-10T09-52-40-055Z.yml  page-2026-03-10T09-52-41-359Z.yml  page-2026-03-10T09-52-59-808Z.yml  page-2026-03-10T09-56-29-734Z.yml  page-2026-03-10T09-59-10-076Z.yml  page-2026-03-10T10-01-11-294Z.yml
docs/: codex_best_practices.md  codex_task_playbook.md  current_state.md  development_workflows.md  future_blueprint.md  live_cli_demo.md  monitor_ui_change_checklist.md  monitor_ui_spec.md  osworld_adaptation_log.md  outcome_p0.md  project_map.md  pypi_release.md  react_refer.md  runtime_known_gaps.md  runtime_scheduling.md  runtime_scheduling_v2.md  task_p0.md  task_p1.md  testing_and_validation.md  todo_list.md  todo_list_p1.md  ui_tasks.md  ux_design_new.md  ux_next.md
examples/: README.md
scripts/: check_osworld_eval_imports.py  install_local.sh  release_pypi.sh  runtime_scheduler_benchmark.py  throughput_baseline.py
snowl/: __init__.py  __main__.py  bench.py  cli.py  errors.py  eval.py  examples_lint.py  project_config.py
snowl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_agent_contracts.py  test_agent_variants.py  test_agentsafetybench_benchmark.py  test_aggregator_summary.py  test_benchmark_registry_and_cli.py  test_chat_agent.py  test_cli_eval.py  test_cli_module_entrypoint.py  test_console_renderer.py  test_container_runtime_providers.py  test_decorator_authoring.py  test_env_and_sandbox.py  test_envs_package.py  test_eval_artifact_schema.py  test_eval_autodiscovery.py  test_eval_planning_and_summary.py  test_eval_web_observability.py  test_examples_lint_and_p1_matrix.py  test_gui_env_interaction.py  test_live_cli_p1.py  test_model_openai_compatible.py  test_osworld_benchmark.py  test_osworld_container_runtime.py  test_osworld_evaluator.py  test_project_model_matrix.py  test_react_agent.py  test_resource_scheduler.py  (+20 more)
(+448 files in other folders)
